Fix: update model loading logic and dependencies

--- a/XG_Boost.ipynb
+++ b/XG_Boost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "61b5e846-11c3-4fbe-ac98-1b9827edeac4",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a6d4d166-f66a-4412-8ba6-56ded4e502d3",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3a48676e-61b1-46e6-8f37-fb06e56faf9e",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "9                                                Yes                             "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "db1da249-cce2-433e-9ee2-5f1aa62e0a11",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "541862e6-0f0d-42c5-b562-6b43e78e5437",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "27cb6874-a303-438b-9dd8-8362695c195d",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "15efd1d6-d2f8-44d2-ba6f-79b129de8c97",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "90216702-9df9-413f-994c-8bd2a59d983f",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4cf3edc6-bf7d-4eb0-ba23-909174083099",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d90aa92b-5611-4829-add3-c9d6b6a86869",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f0e8c093-8b08-45ce-a3cf-0212cef3bcf4",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [18:04:40] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [15:58:45] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -874,7 +874,7 @@
        "              n_jobs=None, num_parallel_tree=None, objective='multi:softprob', ...)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bd9cd06f-93ba-4b81-ac3a-5cf977e563df",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1ac1477f-2b89-4bd8-890a-1680f0fd6c3c",
    "metadata": {},
    "outputs": [
@@ -946,6 +946,53 @@
     "joblib.dump((model, X_encoded.columns, label_encoder), \"model_xgb_missing.pkl\")\n",
     "print(\"\\n✅ Model saved as model_xgb_missing.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5684ac56-8f96-4d9a-95b4-30911093754d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "59b95804-59d1-4731-ae98-4c5b1cb098d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step A: Save model\n",
+    "joblib.dump(model, 'model.pkl')\n",
+    "\n",
+    "# Step B: Save feature columns used during training\n",
+    "feature_columns = X_encoded.columns.tolist()\n",
+    "with open('feature_columns.json', 'w') as f:\n",
+    "    json.dump(feature_columns, f)\n",
+    "\n",
+    "# Step C: Save label encoder classes\n",
+    "with open('label_encoder.json', 'w') as f:\n",
+    "    json.dump(label_encoder.classes_.tolist(), f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44fc2d7c-d9e3-464c-bbe5-09aa2263d3bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0f1178e-d352-45f2-ad3b-33e47028ff4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
